# stats-viz

./: README.md  main.py  pyproject.toml
app/: streamlit_app.py  test1.py  test2.py  test_data_cross.py  test_data_time.py
app/test_app/: app.py  components.py  config.py  country_aggregation_groups.json  country_panel.parquet  data.py
app/test_app/.streamlit/: config.toml
app/test_app/pages/: crop.py  cross_section.py  data_table.py  debug.py  home.py  timeseries.py
data/raw/: country_panel.csv
docs/: index.html  zambia_agri_labor.html  zambia_crop_land.html  zambia_fertilizer_total.html  zambia_irrigation_share.html  zambia_net_capital.html  zambia_table.html
scripts/: build_index.py  build_zambia_overview.py  test.py
scripts/common/: paths.py  utils.py
scripts/country/: build_country_table.py  build_country_timeseries.py
